[gd_scene load_steps=28 format=2]

[ext_resource path="res://Truck.gd" type="Script" id=1]
[ext_resource path="res://assets/IsoTruck/carRed6_002.png" type="Texture" id=2]
[ext_resource path="res://assets/IsoTruck/carRed6_000.png" type="Texture" id=3]
[ext_resource path="res://assets/IsoTruck/carRed6_006.png" type="Texture" id=4]
[ext_resource path="res://assets/IsoTruck/carRed6_007.png" type="Texture" id=5]
[ext_resource path="res://assets/IsoTruck/carRed6_005.png" type="Texture" id=6]
[ext_resource path="res://assets/IsoTruck/carRed6_001.png" type="Texture" id=7]
[ext_resource path="res://assets/IsoTruck/carRed6_008.png" type="Texture" id=8]
[ext_resource path="res://assets/IsoTruck/carRed6_011.png" type="Texture" id=9]
[ext_resource path="res://assets/IsoUnits/peasant-20.png" type="Texture" id=10]
[ext_resource path="res://assets/IsoUnits/peasant-21.png" type="Texture" id=11]
[ext_resource path="res://assets/IsoUnits/peasant-22.png" type="Texture" id=12]
[ext_resource path="res://assets/IsoUnits/peasant-23.png" type="Texture" id=13]
[ext_resource path="res://assets/IsoUnits/peasant-24.png" type="Texture" id=14]
[ext_resource path="res://assets/IsoUnits/knight-0.png" type="Texture" id=15]
[ext_resource path="res://assets/IsoUnits/knight-1.png" type="Texture" id=16]
[ext_resource path="res://assets/IsoUnits/knight128-1.png" type="Texture" id=17]
[ext_resource path="res://assets/IsoUnits/knight128-2.png" type="Texture" id=18]
[ext_resource path="res://assets/IsoUnits/knight128-3.png" type="Texture" id=19]
[ext_resource path="res://assets/IsoUnits/knight128-4.png" type="Texture" id=20]
[ext_resource path="res://assets/IsoUnits/knight128-5.png" type="Texture" id=21]
[ext_resource path="res://assets/IsoUnits/knight128-6.png" type="Texture" id=22]
[ext_resource path="res://assets/IsoUnits/knight128-7.png" type="Texture" id=23]
[ext_resource path="res://assets/IsoUnits/knight128-8.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "n",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "w",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "s",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "e",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "sw",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "nw",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "ne",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "se",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "knight",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "k128",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 10.0

[node name="Truck" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

visible = false
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 1 )
animation = "e"
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "knight"
offset = Vector2( 0, -25 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

visible = false
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Camera2D" type="Camera2D" parent="." index="4"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.75, 0.75 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Editor", "Limit" ]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


